@@ -25,7 +25,8 @@ version 3.2
 * a proper exception is raised (instead of an assertion in debug mode or a
   crash) when there are multiple objects of different incompatible types added
   to a collection
-* implementing binding number types by placeholder (including in/out vars)
+* implemented binding number types by placeholder (including in/out vars)
+* implemented binding arrays of scalar values for input and output
 
 
 ***********
